--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -402,34 +402,34 @@
         </div>
 
         <!-- Placeholder for your name -->
-        <h1>John Richard Alix</h1>
-        <p class="description">I am an innovator, and build projects for fun♥</p>
+        <h1>Kristina Margelino</h1>
+        <p class="description">I am a DEVCON LEGAZPI CHAPTER VOLUNTEER♥</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
-            <h3>DEVCON Affiliations:</h3>
+            <h3>Affiliations:</h3>
             <ul>
-                <li>DEVCON Cagayan de Oro Vice President - 2025</li>
-                <li>DEVCON Code Camps Core Team - 2025</li>
-                <li>Former DEVCON Vice President for Student Engagement - 2024</li>
-                <li>Former Campus DEVCON Ambassador - 2024</li>
+                <li>Bicol University College of Science Peer Counselors' Organization President - AY 2024-2025</li>
+                <li>Bicol University College of Science Sports Club Public Information Officer - AY 2024-2025</li>
+                <li>Bicol University College of Science ACCeSS Planning Committee Junior Councilor - AY 2024-2025</li>
+                <li>Bicol University - University Student Council - University Councilor for Internal Affairs - AY 2024-2025</li>
             </ul>
 
-            <h3>Google Developers Affiliations:</h3>
+            <h3>Skills:</h3>
             <ul>
-                <li>Technical Core Team Member - 2025</li>
-                <li>Former Documentations Core Team Member - 2024</li>
-                <li>GDSC USTP IT Ambassador - 2022</li>
-                <li>GDSC USTP Mobile Development Lead - '2023-2024'</li>
+                <li>UI/UX Designer</li>
+                <li>Frontend Development</li>
+                <li>Backend Development</li>
+                <li>Soft Skills</li>
             </ul>
         </div>
 
         <!-- Centered Links -->
         <div class="links">
-            <a href="https://www.linkedin.com/in/john-richard-alix-666481230/"><i class="fab fa-linkedin"></i>LinkedIn</a>
-            <a href="https://github.com/yhnalx"><i class="fab fa-github"></i>GitHub</a>
-            <a href="https://www.facebook.com/yhnalx"><i class="fab fa-facebook"></i>Facebook</a>
+            <a href="https://www.linkedin.com/in/kristina-margelino-5b9b4b205/"><i class="fab fa-linkedin"></i>LinkedIn</a>
+            <a href="https://github.com/auchyoo" target="_blank"><i class="fab fa-github"></i>GitHub</a>
+            <a href="https://web.facebook.com/margelino.kris"><i class="fab fa-facebook"></i>Facebook</a>
         </div>
 
         <div class="visitor-count">
